--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -6,8 +6,15 @@
 <div class="container-fluid">
     <div class="row"></div>
     <!-- Goals column-->
-    <div></div>
-</div>
+    <div class="container">
+        <h1 class="my-5 text-center">Goals List</h1>
+        <nav class="navbar navbar-expand-xl navbar-dark sticky-top create_panel">
+    </div>
 
 <!-- index.html content ends here -->
+
 {% endblock %}
+
+{% block copyright %}
+    Copyright 2024 Andreas Sandberg
+{% endblock %}    
