--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -10,6 +10,12 @@
         <h1 class="my-5 text-center">Goals List</h1>
         <nav class="navbar navbar-expand-xl navbar-dark sticky-top create_panel">
     </div>
+    <div class="container-fluid" id="goals-nav-container">
+        <button class="navbar-toggle" type="button" >
+
+        </button>
+
+    </div>
 
 <!-- index.html content ends here -->
 
