--- a/templates/base.html
+++ b/templates/base.html
@@ -2,55 +2,82 @@
 
 {% url 'home' as home_url %}
 
+{% url 'home' as home_url %}
+
 <!DOCTYPE html>
 <html class="h-100" lang="en">
 
 <head>
-    <title>GoalMine Task manager</title>
+    <title>Goal-Mine</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Insert Google Fonts CSS here -->
-    <link>
-    <link>
-    <link>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
 
     <!-- Insert Font Awesome CSS here -->
-    <link>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
-    <!-- Insert Bootstrap CSS here -->
-    <!-- Custom CSS -->
+    <!-- Insert all Bootstrap CSS here -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <!-- Link to Custom CSS here -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link>
+
 </head>
 
 <body class="d-flex flex-column h-100 main-bg">
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-xl navbar-dark sticky-top create_panel bg-white">
+    <!-- Houses all the navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
-            
-            <span class="navbar-text text-muted">
-                A simple web-based task manager
-            </span>
+            <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">G<span class="red-o">o</span>al<span
+                        class="thin">Mine</span></span></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page"
+                            href="#">Home</a>
+                    </li>
+
+                </ul>
+                <span class="navbar-text text-muted">
+                    A task manager to make life easier
+                </span>
+            </div>
         </div>
     </nav>
-    <main>
+
+    <main class="flex-shrink-0 main-bg">
+
         {% block content %}
         <!-- Insert content here -->
-        <p>This is a test pararaph</p>
         {% endblock content %}
+
     </main>
 
-    <footer>
-        <p class="m-0 text-center text-white">
-            {% block copyright %}
-                Made by Andreas Sandberg 2024
-            {% endblock copyright %}
+    <!-- Footer -->
+    <footer class="footer mt-auto py-3 dark-bg">
+        <p class="m-0 text-center text-white">Made in 2024 by Dym077</p>
+        <p class="m-0 text-center text-white">Follow us: <i class="fab fa-facebook-square ms-3"></i>
+            <i class="fab fa-twitter-square ms-3"></i>
+            <i class="fab fa-instagram-square ms-3"></i>
+            <i class="fab fa-youtube-square ms-3"></i>
         </p>
-        
     </footer>
 
-    <script src="{% static 'js/script.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
+        </script>
 </body>
 
+<script src="{% static 'js/script.js' %}"></script>
+
 </html>
+
+
