--- a/todo/templates/todo/goal_detail.html
+++ b/todo/templates/todo/goal_detail.html
@@ -9,7 +9,7 @@
                 <p class="post-subtitle">{{ goal.author }} | {{ goal.created_on }}</p>
             </div>
             <div class="d-none d-md-block col-md-6 masthead-image">
-                <img src="{% static 'images/default.jpg' %}" class="scale" alt="placeholder">
+                <img src="{% static 'images/default-image.png' %}" class="scale" alt="placeholder">
             </div>
         </div>
     </div>
