--- a/templates/base.html
+++ b/templates/base.html
@@ -79,6 +79,11 @@
     </nav>
 
     <main class="flex-shrink-0 main-bg">
+        {% if user.is_authenticated %}
+        <p class="text-end m-3">You are currently logged in as {{ user}}</p>
+        {% else %}
+        <p class="text-end m-3">You are currently not logged in</p>
+        {% endif %}
 
         {% block content %}
         <!-- Insert content here -->
