--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
     <!-- Houses all the navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">G<span class="red-o">o</span>al<span
+            <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">G<span class="green-o">o</span>al<span
                         class="thin">Mine</span></span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +45,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page"
-                            href="{% url 'home' %}">Home</a>
+                            href="{% url 'home' %}">Goals</a>
                     </li>
                     <li class="nav-item">
                         <a
