--- a/todo/templates/todo/goal_detail.html
+++ b/todo/templates/todo/goal_detail.html
@@ -19,10 +19,52 @@
     <div class="row">
         <div class="col card mb-4  mt-3 left  top">
             <div class="card-body">
-               
+
                 <p class="card-text">
                     {{ goal.content | safe }}
                 </p>
+            </div>
+        </div>
+    </div>
+    <!-- This shows number of added tasks -->
+    <div class="row">
+        <div class="col-12">
+            <strong class="text-secondary">
+                <i class="far fa-comments"></i> {{ task_count }}
+            </strong>
+        </div>
+        <div class="col-12">
+            <hr>
+        </div>
+    </div>
+    <!-- Displaying Comments -->
+    <div class="row">
+        <div class="col-md-8 card mb-4  mt-3 ">
+            <h3>Tasks:</h3>
+            <div class="card-body">
+                <!-- We want a for loop inside the empty control tags
+              to iterate through each comment in comments -->
+                {% for task in tasks %}
+                <div class="p-2 comments
+              {% if not comment.approved and comment.author == user %}
+              faded{% elif not comment.approved %} d-none{% endif %}">
+                    <p class="font-weight-bold">
+                        {{ task.author }}
+                        <span class="font-weight-normal">
+                            {{ task.created_on }}
+                        </span> wrote:
+                    </p>
+                    <div id="comment{{ comment.id }}">
+                        {{ task.body | linebreaks }}
+                    </div>
+                    {% if not task.approved and task.author == user %}
+                    <p class="approval">
+                        This task is awaiting approval
+                    </p>
+                    {% endif %}
+                </div>
+                <!-- Our for loop ends here -->
+                {% endfor %}
             </div>
         </div>
     </div>
