--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">G<span class="green-o">o</span>al<span
-                        class="thin">Mine</span></span></a>
+                        class="thin">-Mine</span></span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
