Make tasks visible on separate goals

--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -25,6 +25,11 @@
                             </a>
 
                             <hr />
+                            <ul>
+                                {%for task in goal.tasks.all%}
+                                    <li>{{task.body}}</li>
+                                {%endfor%}
+                            </ul>
                             <p class="card-text text-muted h6">{{ goal.created_on}}
                             </p>
                         </div>
