--- a/todo/templates/todo/goal_detail.html
+++ b/todo/templates/todo/goal_detail.html
@@ -45,9 +45,7 @@
                 <!-- We want a for loop inside the empty control tags
               to iterate through each comment in comments -->
                 {% for task in tasks %}
-                <div class="p-2 comments
-              {% if not comment.approved and comment.author == user %}
-              faded{% elif not comment.approved %} d-none{% endif %}">
+                    <div class="p-2 comments">
                     <p class="font-weight-bold">
                         {{ task.author }}
                         <span class="font-weight-normal">
