--- a/todo/templates/todo/goal_detail.html
+++ b/todo/templates/todo/goal_detail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %} {% block content %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 <div class="masthead">
     <div class="container">
@@ -55,10 +56,28 @@
                     </div>
 
                 </div>
-                <!-- Our for loop ends here -->
+                <!-- This is the end.. but only of this for loop -->
                 {% endfor %}
             </div>
         </div>
+        <!-- Creating New Tasks -->
+    <div class="col-md-4 card mb-4 mt-3">
+        <div class="card-body">
+          {% if user.is_authenticated %}
+          <h3>Add a new task:</h3>
+          <p>Posting as: {{ user.username }}</p>
+          <form id="taskForm" method="post"
+            style="margin-top: 1.3em;">
+            {{ task_form | crispy }}
+            {% csrf_token %}
+            <button id="submitButton" type="submit"
+              class="btn btn-signup btn-lg">OK</button>
+          </form>
+          {% else %}
+          <p>Log in to add a task</p>
+          {% endif %}
+        </div>
+      </div>
     </div>
 </div>
 
