Add CSS customization

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
-
+    <script src="https://kit.fontawesome.com/30b1910aa3.js" crossorigin="anonymous"></script>
     <!-- Insert Font Awesome CSS here -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
@@ -35,8 +35,8 @@
     <!-- Houses all the navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">G<span class="green-o">o</span>al<span
-                        class="thin">-Mine</span></span></a>
+            <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">Go<span class="green-letter">al</span><span
+                        class="brand">-Mi</span><span class="red-letter">ne</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
