--- a/todo/templates/todo/goal_detail.html
+++ b/todo/templates/todo/goal_detail.html
@@ -31,7 +31,7 @@
     <div class="row">
         <div class="col-12">
             <strong class="text-secondary">
-                <i class="far fa-comments"></i> {{ task_count }}
+                <i class="fa-solid fa-bars-progress"></i></i> {{ task_count }}
             </strong>
         </div>
         <div class="col-12">
