--- a/templates/base.html
+++ b/templates/base.html
@@ -45,15 +45,14 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page"
-                            href="{% url 'home' %}">Goals</a>
+                            href="{% url 'manager' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a
-                          class="nav-link
+                        <a class="nav-link
                           {% if request.path == manager_url %}active{%endif%}"
                           aria-current="page"
-                          href="{% url 'manager' %}"
-                          >Tasks</a
+                          href="{% url 'home' %}"
+                          >Goals</a
                         >
                       </li>
                       {% if user.is_authenticated %}
