--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -1,14 +1,25 @@
-{% extends "base.html" %}
-
+{% extends 'base.html' %}
 {% block content %}
+{% load static %}
 
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-4 text-center">
+      <img src="{% static 'images/profile.jpg' %}" width="75%" />
+    </div>
+    
+    <div class="col-8">  
+      <h2>{{ manager.title }}</h2>
+      {{ manager.content | safe }}
+      
+    </div>
+  </div>
+  <div class="row">
+    <div class="col text-right">
+      <!-- Updated on field should be here -->
 
-<!-- Here's where index.html content goes -->
-
-
-<!-- index.html content ends here -->
-{% endblock %}
-
-{% block copyright %}
-copyright 2024 Dym077
-{% endblock %}
+      <p class="text-end"><em>Updated on: {{ manager.updated_on }}</em></p>
+    </div>
+  </div>
+</div>
+{% endblock content %}
