--- a/todo/templates/todo/goal.html
+++ b/todo/templates/todo/goal.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<!-- Here's where index.html content goes -->
+<!-- Here's where goal.html content goes -->
 <div class="container-fluid">
     <div class="row">
 
@@ -58,7 +58,7 @@
     {% endif %}
 </div>
 
-<!-- index.html content ends here -->
+<!-- goal.html content ends here -->
 {% endblock %}
 
 {% block copyright %}
