--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -9,9 +9,14 @@ body {
     color: #4A4A4F;
 }
 
-.green-o {
-    color: #05b14d;
+.green-letter {
+    color: #22a11f;
 }
+
+.red-letter {
+    color: #E84610;
+}
+
 
 .thin {
     font-weight: 300;
@@ -67,7 +72,7 @@ body {
 }
 
 .masthead-text {
-    background-color: #445261;
+    background-color: #188123;
     color: white;
     position: relative;
 }
@@ -113,7 +118,7 @@ body {
 
 .btn-signup,
 .btn-edit {
-    background-color: #188181;
+    background-color: #198118;
     color: #fff;
 }
 
