--- a/templates/base.html
+++ b/templates/base.html
@@ -112,10 +112,9 @@
             Made by Dym077 2024
         {% endblock copyright %}</p>
 
-        <p class="m-0 text-center text-white">Follow me: <i class="fab fa-facebook-square ms-3"></i>
-            <i class="fab fa-twitter-square ms-3"></i>
-            <i class="fab fa-instagram-square ms-3"></i>
-            <i class="fab fa-youtube-square ms-3"></i>
+        <p class="m-0 text-center text-white">Follow me: <a href="https://www.facebook.com/dreamtestimony/" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-square ms-3"></i></a>
+            <a href="https://www.linkedin.com/in/andreas-sandberg-3278a6295/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></i></a>
+            <a href="https://www.youtube.com/channel/UCyvTYwPf1ynEnBV5Knn1eLw" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube-square ms-3"></i></a>
         </p>
     </footer>
 
