Add border to goals
Change Goals menu to Manager

--- a/manager/templates/manager/task.html
+++ b/manager/templates/manager/task.html
@@ -13,6 +13,7 @@
       {{ manager.content | safe }}
       
     </div>
+    <p>This is the manager page. The idea is that it should house some sort of calendar or schedule manager</p>
   </div>
   <div class="row">
     <div class="col text-right">
