--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
                           {% if request.path == manager_url %}active{%endif%}"
                           aria-current="page"
                           href="{% url 'manager' %}"
-                          >Goals</a
+                          >Manager</a
                         >
                       </li>
                       {% if user.is_authenticated %}
