Add textfield to goal area

--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -48,17 +48,17 @@
         <!-- The Add Goal form goes here -->
         <div class="col-md-4 card mb-4 mt-3">
             <div class="card-body">
-              {% if user.is_authenticated %}
+             
               <h3>Create a new goal:</h3>
               <p>Added by: {{ user.username }}</p>
               <form id="goalForm" method="post"
                 style="margin-top: 1.3em;">
-                {{ comment_form | crispy }}
+                {{ form | crispy }}
                 {% csrf_token %}
                 <button id="submitButton" type="submit"
                   class="btn btn-signup btn-lg">Submit</button>
               </form>
-              {% else %}
+              {% if user.is_authenticated %}show form{% else %}
               <p>Log in to create a goal</p>
               {% endif %}
             </div>
