--- a/templates/base.html
+++ b/templates/base.html
@@ -49,14 +49,7 @@
                         <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page"
                             href="{% url 'home' %}">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link
-                          {% if request.path == manager_url %}active{%endif%}"
-                          aria-current="page"
-                          href="{% url 'manager' %}"
-                          >Manager</a
-                        >
-                      </li>
+            
                       {% if user.is_authenticated %}
                       <li class="nav-item">
                           <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page" href="{% url 'account_logout' %}">Logout</a>
@@ -73,7 +66,7 @@
 
                 </ul>
                 <span class="navbar-text text-muted">
-                    A task manager to make life easier
+                    Your everyday task manager
                 </span>
             </div>
         </div>
