--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -26,7 +26,8 @@
                                     <p class="author">Author: {{ goal.author }}</p>
                                 </div>
                             </div>
-                            <a href="{% url 'goal_detail' goal.slug %}" class="goal-link">
+                            <a href="{% url 'goal_detail' pk=goal.pk %}" class="goal-link">
+                                <p>{{ goal.pk }}</p>
                                 <h2 class="card-title">{{ goal.title }}</h2>
                                 <p class="card-text">{{ goal.excerpt }}</p>
                             </a>
@@ -57,8 +58,7 @@
              
               <h3>Create a new goal:</h3>
               <p>Added by: {{ user.username }}</p>
-              <form id="goalForm" method="post" action="{% url 'add_goal' %}"
-                style="margin-top: 1.3em;">
+              <form id="goalForm" method="post" style="margin-top: 1.3em;">
                 {{ form | crispy }}
                 {% csrf_token %}
                 <button id="submitButton" type="submit"
