--- a/todo/templates/todo/goal_detail.html
+++ b/todo/templates/todo/goal_detail.html
@@ -1,6 +1,8 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} 
 {% load static %}
 {% load crispy_forms_tags %}
+
+{% block content %}
 
 <div class="masthead">
     <div class="container">
@@ -8,6 +10,10 @@
             <div class="col-md-6 masthead-text">
                 <h1 class="post-title">{{ goal.title }}</h1>
                 <p class="post-subtitle">{{ goal.author }} | {{ goal.created_on }}</p>
+                <div>
+                    <a onclick="deleteModal.show()" class="btn btn-danger">Delete</a>
+                    <a class="btn btn-danger" href="{% url 'goal_edit' edit_goal_pk=goal.pk%}">Edit</a>
+                </div>   
             </div>
             <div class="d-none d-md-block col-md-6 masthead-image">
                 <img src="{% static 'images/default.jpg' %}" class="scale" alt="placeholder">
@@ -23,6 +29,7 @@
 </div>
 
 <div class="container">
+    Container
     <div class="row">
         <div class="col card mb-4  mt-3 left  top">
             <div class="card-body">
@@ -71,6 +78,8 @@
         </div>
         <!-- Creating New Tasks -->
     <div class="col-md-4 card mb-4 mt-3">
+
+        <!-- Redundant?
         <div class="card-body">
           {% if user.is_authenticated %}
           <h3>Add a new task:</h3>
@@ -89,6 +98,7 @@
       </div>
     </div>
 </div>
+-->
 
 <!-- A modal for task deletion confirmation -->
 <div class="modal fade" id="deleteModal" tabindex="-1"
@@ -97,17 +107,17 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title"
-          id="deleteModalLabel">Delete task?</h5>
+          id="deleteModalLabel">Delete goal?</h5>
         <button type="button" class="btn-close"
           data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Do You want to delete this task? The action is irreversible.
+        Do You want to delete this goal? The action is irreversible.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary"
           data-bs-dismiss="modal">Close</button>
-        <a id="deleteConfirm" href="#" class="btn
+        <a id="deleteConfirm" href="{% url 'goal_delete' delete_goal_pk=goal.pk %}" class="btn
           btn-danger">Delete</a>
       </div>
     </div>
