Make new migrations

--- a/todo/templates/todo/goal_detail.html
+++ b/todo/templates/todo/goal_detail.html
@@ -100,7 +100,7 @@
 </div>
 -->
 
-<!-- A modal for task deletion confirmation -->
+<!-- A modal for goal deletion confirmation -->
 <div class="modal fade" id="deleteModal" tabindex="-1"
   aria-labelledby="deleteModalLabel" aria-hidden="true">
   <div class="modal-dialog">
