--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -8,7 +8,7 @@
 <div class="container-fluid">
     <div class="row">
         <p>The Goal-Mine is a basic but easy to use task manager that can help You organize both daily chores and long-term goals.
-            Add, edit and complete Your asks and achieve Your goals.
+            Add, edit and complete Your tasks and achieve Your goals.
         </p>
         <img src="{% static 'images/4361.webp' %}" width="200" 
         height="250" alt="placeholder"/>
