Edit readme document

--- a/templates/base.html
+++ b/templates/base.html
@@ -110,6 +110,7 @@
         <p class="m-0 text-center text-white">Follow me: <a href="https://www.facebook.com/dreamtestimony/" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-square ms-3"></i></a>
             <a href="https://www.linkedin.com/in/andreas-sandberg-3278a6295/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></i></a>
             <a href="https://www.youtube.com/channel/UCyvTYwPf1ynEnBV5Knn1eLw" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube-square ms-3"></i></a>
+            <a href="http://www.freepik.com">Designed by pch.vector / Freepik</a>
         </p>
     </footer>
 
