--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -7,12 +7,12 @@
 <!-- Here's where index.html content goes -->
 <div class="container-fluid">
     <div class="row">
-        <p>The Goal-Mine is a basic but easy to use task manager that can help You organize both daily chores and long-term goals.
-            Add, edit and complete Your tasks and achieve Your goals.
+        <p><strong>The Goal-Mine is a basic but easy to use task manager that can help You organize both daily chores and long-term goals.
+            <br>
+            Add, edit and complete Your tasks and achieve Your goals.</strong>
         </p>
         <img src="{% static 'images/4361.webp' %}" width="200" 
         height="250" alt="placeholder"/>
-        <a href="http://www.freepik.com">Designed by pch.vector / Freepik</a>
 
         <!-- Goals List Column -->
         <div class="col-12 mt-3 left">
