--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .red-letter {
-    color: #E84610;
+    color: #ff6010;
 }
 
 
@@ -35,7 +35,7 @@ body {
 }
 
 .card {
-    border: none;
+    border: outset;
     background-color: transparent;
 }
 
