--- a/templates/base.html
+++ b/templates/base.html
@@ -101,16 +101,15 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer mt-auto py-3 dark-bg">
+    <footer class="bg-dark text-center text-lg-start text-white">
         <p class="m-0 text-center text-white">
             {% block copyright %}
             Made by Dym077 2024
         {% endblock copyright %}</p>
 
-        <p class="m-0 text-center text-white">Follow me: <a href="https://www.facebook.com/dreamtestimony/" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-square ms-3"></i></a>
-            <a href="https://www.linkedin.com/in/andreas-sandberg-3278a6295/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></i></a>
-            <a href="https://www.youtube.com/channel/UCyvTYwPf1ynEnBV5Knn1eLw" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube-square ms-3"></i></a>
-            <a href="http://www.freepik.com">Designed by pch.vector / Freepik</a>
+        <p class="m-0 text-center text-white">Follow me: <a href="https://www.facebook.com/dreamtestimony/" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-square ms-3" style="font-size: 35px;"></i></a>
+            <a href="https://www.linkedin.com/in/andreas-sandberg-3278a6295/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin" style="font-size: 35px; color:#22a11f"></i></i></a>
+            <a href="https://www.youtube.com/channel/UCyvTYwPf1ynEnBV5Knn1eLw" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube-square ms-3" style="font-size: 35px; color: #ff6010"></i></a>
         </p>
     </footer>
 
