Adjust the footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
 
                 </ul>
                 <span class="navbar-text text-muted">
-                    Your everyday task manager
+                    <b>An everyday task manager</b>
                 </span>
             </div>
         </div>
@@ -101,7 +101,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-dark text-center text-lg-start text-white">
+    <footer class="footer mt-auto py-3 dark-bg">
         <p class="m-0 text-center text-white">
             {% block copyright %}
             Made by Dym077 2024
