Correcting errors in HTML

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,8 +18,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Jersey+25&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Platypi:ital,wght@0,300..800;1,300..800&family=Share+Tech+Mono&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Jersey+25&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Platypi:ital,wght@0,300..800;1,300..800&family=Share+Tech+Mono&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/30b1910aa3.js" crossorigin="anonymous"></script>
     <!-- Insert Font Awesome CSS here -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -37,8 +39,9 @@
     <!-- Houses all the navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">Go<span class="green-letter">al</span><span
-                        class="brand">-Mi</span><span class="red-letter">ne</span></a>
+            <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">G o <span
+                        class="green-letter">a l </span><span class="brand">- M i</span>
+                    <span class="red-letter"> n e</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -49,20 +52,22 @@
                         <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page"
                             href="{% url 'home' %}">Home</a>
                     </li>
-            
-                      {% if user.is_authenticated %}
-                      <li class="nav-item">
-                          <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page" href="{% url 'account_logout' %}">Logout</a>
-                      </li>
-                      {% else %}
-                      <li class="nav-item">
-                          <a class="nav-link {% if request.path == signup_url %}active{% endif %}" aria-current="page"
-                              href="{% url 'account_signup' %}">Register</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link {% if request.path == login_url %}active{% endif %}" aria-current="page" href="{% url 'account_login' %}">Login</a>
-                      </li>
-                      {% endif %}
+
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page"
+                            href="{% url 'account_logout' %}">Logout</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == signup_url %}active{% endif %}" aria-current="page"
+                            href="{% url 'account_signup' %}">Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == login_url %}active{% endif %}" aria-current="page"
+                            href="{% url 'account_login' %}">Login</a>
+                    </li>
+                    {% endif %}
 
                 </ul>
                 <span class="navbar-text text-muted">
@@ -105,24 +110,28 @@
         <p class="m-0 text-center text-white">
             {% block copyright %}
             Made by Dym077 2024
-        {% endblock copyright %}</p>
+            {% endblock copyright %}</p>
 
-        <p class="m-0 text-center text-white">Follow me: <a href="https://www.facebook.com/dreamtestimony/" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-square ms-3" style="font-size: 35px;"></i></a>
-            <a href="https://www.linkedin.com/in/andreas-sandberg-3278a6295/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin" style="font-size: 35px; color:#22a11f"></i></i></a>
-            <a href="https://www.youtube.com/channel/UCyvTYwPf1ynEnBV5Knn1eLw" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube-square ms-3" style="font-size: 35px; color: #ff6010"></i></a>
+        <p class="m-0 text-center text-white">Follow me: <a href="https://www.facebook.com/dreamtestimony/"
+                target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-square ms-3"
+                    style="font-size: 35px;"></i></a>
+            <a href="https://www.linkedin.com/in/andreas-sandberg-3278a6295/" target="_blank"
+                rel="noopener noreferrer"><i class="fa-brands fa-linkedin"
+                    style="font-size: 35px; color:#22a11f"></i></i></a>
+            <a href="https://www.youtube.com/channel/UCyvTYwPf1ynEnBV5Knn1eLw" target="_blank"
+                rel="noopener noreferrer"><i class="fab fa-youtube-square ms-3"
+                    style="font-size: 35px; color: #ff6010"></i></a>
         </p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
-        </script>
+    </script>
 
     {% block extras %}
-    {% endblock %}    
+    {% endblock %}
 </body>
 
 <script src="{% static 'js/script.js' %}"></script>
 
 </html>
-
-
