--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,8 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">G o <span
                         class="green-letter">a l </span><span class="brand">- M i</span>
-                    <span class="red-letter"> n e</span></a>
+                    <span class="red-letter"> n e</span>
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -117,7 +118,7 @@
                     style="font-size: 35px;"></i></a>
             <a href="https://www.linkedin.com/in/andreas-sandberg-3278a6295/" target="_blank"
                 rel="noopener noreferrer"><i class="fa-brands fa-linkedin"
-                    style="font-size: 35px; color:#22a11f"></i></i></a>
+                    style="font-size: 35px; color:#22a11f"></i></a>
             <a href="https://www.youtube.com/channel/UCyvTYwPf1ynEnBV5Knn1eLw" target="_blank"
                 rel="noopener noreferrer"><i class="fab fa-youtube-square ms-3"
                     style="font-size: 35px; color: #ff6010"></i></a>
