--- a/templates/base.html
+++ b/templates/base.html
@@ -41,8 +41,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">G o <span
                         class="green-letter">a l </span><span class="brand">- M i</span>
-                    <span class="red-letter"> n e</span>
-            </a>
+                    <span class="red-letter"> n e</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
